--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,6 +219,19 @@ img {
   	 padding: 0px 10px;
   }
 }
+
+@media(max-width: 412px) and (max-height:732px)
+ {
+  #img10 {
+  	 margin-left: 14px;
+  }
+}
+@media(max-width: 361px)
+ {
+  #img10 {
+  	 margin-left: 20px;
+  }
+}
   @media screen and (max-width: 413px)
  {
   #img10 {
