adding changes to .css file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,7 +220,7 @@ img {
   }
 }
 
-@media(max-width: 412px) and (max-height:732px)
+/* @media(max-width: 412px) and (max-height:732px)
  {
   #img10 {
   	 margin-left: 14px;
@@ -231,7 +231,7 @@ img {
   #img10 {
   	 margin-left: 20px;
   }
-}
+} */
   @media screen and (max-width: 413px)
  {
   #img10 {
